--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Heart breaker
+  uni: Zoom University
+  year: Sept 2015 - Dec 2019
   # awards:
-  # summary:
+  # summary: I like milk chocolates. Jk, I don't. 
